tests/kubernetes/checks/example_NginxIngressCVE202125742/annotation1-FAILED.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:  
    nginx.ingress.kubernetes.io/server-snippet: |    
      lua_package_path  "/etc/nginx/lua/?.lua;;";
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:    
    paths:      
      - path: /exp        
        pathType: Prefix        
        backend:          
          service:            
            name: some-service            
            port:              
              number: 1234
